@@ -2,8 +2,10 @@ DIST font-arial-cp1250.tar.bz2 249705 RMD160 a2fc7ae07b0d80936ea58e168e1047efccb
 DIST font-arial-iso-8859-1.tar.bz2 234242 RMD160 666697cd5efd9387057a898c714175e7c2aacbcd SHA1 152c40bf20de34aa8802d7f80d34d673b0b67212 SHA256 9730f481764f367c9089d0166fb6ccf9148808ffbbfeca635cf0e6db75765d29
 DIST font-arial-iso-8859-2.tar.bz2 222208 RMD160 562d4d92c4f5f3d537340fde3ad8d1495ac41acb SHA1 7b99bbe0e9ba89a57eccbea8f93c453c4f268181 SHA256 71debfc960007c2f6242dfc91e8b1c005b30a99e129aeb00ab8c03f4371b41c1
 DIST mplayer2-build-2.0-rc2.tar.xz 7217292 RMD160 a9a577ec8808e6f11aa88700c22b4f955d4d6ef8 SHA1 c1d61dab414f670de4bd826a87c398216dcd29a1 SHA256 ed85c5eb249c344342ca3cf150faa1ab9c25d848de6f319949fdbc8926b5a437
+DIST mplayer2-build-2.0.tar.xz 7424672 RMD160 48193cf6a48e16cce7f74d8f0915e64dc4b7d1cd SHA1 951bc88cdaa486044a32e66293bdcb5bfd17f759 SHA256 e0a4dba087ba8c6a916d8bc9c7063bd2fd86d36bb08e31a2bd2d82e56b3c4058
+EBUILD mplayer2-2.0.ebuild 22488 RMD160 dd2b1141301953bc43595f344ea13206f9c7ce26 SHA1 56c5fafc95e18d949a8aae0e5cf0e0c1a5f43cca SHA256 d56e61ed694f2f359386f6ab88ada12d5ee7ffee388cd1208c07695fe4422f10
 EBUILD mplayer2-2.0_rc2-r1.ebuild 22275 RMD160 d73df455c82284e0c653896672282f26b02897ce SHA1 dfc6438b86bfaf75197f4f5e52647f6905419054 SHA256 bd3cb2c135adcabdf0714e3c90e91083f77a8bf6d932042e53daea442f689168
 EBUILD mplayer2-2.0_rc2-r2.ebuild 22476 RMD160 d1383237b8460740aaba399d8a23a038d6285568 SHA1 d07a11d849c395b115745b8275f0c5ad1aadc945 SHA256 34289c120f31e1019239ed43141b3b6f88ef621bf07dfbaee7045bdfade58927
-EBUILD mplayer2-9999.ebuild 22506 RMD160 ca0f2bb0c345f79c604a7aa49b0465bd7afd0c95 SHA1 f287d6ea9f44cc2c08cfbb36af6bd92e8b8b60c5 SHA256 a7a6b81bd5b781a0e4d0b0d4c0ac7fbd1ccfab6356863bfd1c85046bc6e82904
-MISC ChangeLog 3124 RMD160 87b6327af7f2a4ecf3b955d40ca187a6666b6bcc SHA1 83291d71286aba1d2266cafaa04925d99c127f4a SHA256 f4d43a3e3dc920c979033a8c58dc54decbbe5fb625e75b39cbf057d96527628e
+EBUILD mplayer2-9999.ebuild 22506 RMD160 7b285375b50ba18704632a50b610c47b3047bb88 SHA1 27b2e35731f11c0850892e9f092aa8b8ed90963f SHA256 4da08415080227e780bbf2942b0c44d53bef8a8c15c4661fc2057904d6c97d42
+MISC ChangeLog 3276 RMD160 ae37266447f824245cfc0192de0977549637ad1b SHA1 b24dc1126071227ab5a4dd0c68f224f85b89ad0c SHA256 dcbb21a09a1c893d7e2ea9e8142b27372cf4882c17b1930470bb37789a784285
 MISC metadata.xml 4281 RMD160 5e302ce85c61919b72fadbb4a7c134dddf82d4e1 SHA1 58430d368d4705f8be893daaed6526776fc2cad6 SHA256 c1a773f2c2e6568e1ef88050547f016cb1b02d3cfb92e1350e6de901b3289098
