@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*mplayer2-2.0 (28 Mar 2011)
+
+  28 Mar 2011; Nikoli <nikoli@lavabit.com> +mplayer2-2.0.ebuild,
+  mplayer2-9999.ebuild:
+  version bump, license is GPL-3
+
 *mplayer2-2.0_rc2-r2 (24 Mar 2011)
 
   24 Mar 2011; Nikoli <nikoli@lavabit.com> +mplayer2-2.0_rc2-r2.ebuild,
